Page des badges. Affichage des points. Modification de CSS

--- a/app/shared/challenge/challenge.modal.view.html
+++ b/app/shared/challenge/challenge.modal.view.html
@@ -58,7 +58,9 @@
         <h3 class="badge-level-title" style="margin-bottom:20px">Niveaux</h3>
 
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4" style="margin-top:10px" ng-repeat="level in challenge.levels">
+            <div class="col-xs-12"
+                 ng-class="{'col-sm-6 block-centered' : challenge.levels.length==1, 'col-sm-6' : challenge.levels.length>1, 'col-md-4' : challenge.levels.length>2}"
+                 style="margin-top:10px" ng-repeat="level in challenge.levels">
                 <!-- image -->
                 <div style="margin-bottom:10px; text-align:center">
                     <img ng-show="level.image" class="img-responsive img-circle level-img center-block"
@@ -69,10 +71,10 @@
                     <span class="label label-primary badge-label-points">{{level.points}}pts</span>
                 </div>
                 <!-- level name -->
-                <h4 style="margin-bottom: 0; text-align:center"><span
+                <h4 style="margin-bottom: 2px; text-align:center"><span
                         style="font-weight:bold">{{level.name}}</span><span
                         ng-show="challenge.levelAcquired>=level.index"
-                        class="glyphicon glyphicon-ok badge-glyphicon-sm"></h4>
+                        class="glyphicon glyphicon-ok badge-glyphicon-sm"></span></h4>
                 <!-- progress bar (level) -->
                 <uib-progressbar style="margin-bottom:10px"
                                  ng-show="level.percent" max="100"
@@ -94,24 +96,6 @@
                 </div>
             </div>
         </div>
-
-        <!--<uib-accordion close-others="oneAtATime">
-            <uib-accordion-group ng-repeat="level in challenge.levels" heading="{{level.name}}">
-                <uib-progressbar style="margin-bottom:10px"
-                                 ng-show="level.percent" max="100"
-                                 value="level.percent" type="success">{{level.percent}}%
-                </uib-progressbar>
-                <div class="row">
-                    <div class="col-xs-12" ng-repeat="condition in level.conditions">
-                        <p style="margin-bottom:0">{{condition.condition}}</p>
-                        <uib-progressbar style="margin-bottom: 0;"
-                                         ng-show="condition.percent" max="100"
-                                         value="condition.percent" type="success">{{condition.percent}}%
-                        </uib-progressbar>
-                    </div>
-                </div>
-            </uib-accordion-group>
-        </uib-accordion> -->
     </div>
     <div class="modal-footer">
         <!-- close -->
@@ -119,7 +103,7 @@
                 ng-click="cancel()">Fermer
         </button>
         <!-- take up challenge -->
-        <button type="button" class="btn btn-primary"
+        <button ng-show="!challenge.progressPercent" type="button" class="btn btn-primary"
                 ng-click="takeUpChallenge()">Relever !
         </button>
     </div>
