--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="app/components/home/home.mdl.js"></script>
     <script src="app/components/challenges/challenges.mdl.js"></script>
     <script src="app/shared/challenge/challenge.mdl.js"></script>
+    <script src="app/shared/badge/badge.mdl.js"></script>
     <script src="app/components/users/users.mdl.js"></script>
     <script src="app/shared/user/user.mdl.js"></script>
     <script src="app/components/profile/profile.mdl.js"></script>
@@ -42,6 +43,7 @@
 
     <!-- directives -->
     <script src="app/shared/challenge/challenge.dir.js"></script>
+    <script src="app/shared/badge/badge.dir.js"></script>
     <script src="app/shared/user/user.dir.js"></script>
 
     <!-- services -->
