--- a/app/shared/user/user.view.html
+++ b/app/shared/user/user.view.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-sm-4 col-lg-2 user-container">
+<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 user-container">
     <a ng-href="#profile/{{user.id}}">
         <!-- panel -->
     <div class="panel panel-default user-panel">
