modification de la modal de détails. Autofocus sur la modal de connexion.

--- a/app/shared/authentication/authentication.modal.view.html
+++ b/app/shared/authentication/authentication.modal.view.html
@@ -9,7 +9,7 @@
           <span class="input-group-addon">
             @
           </span>
-            <input class="form-control" placeholder="Email" ng-model="mail" type="email" required="">
+            <input class="form-control" placeholder="Email" ng-model="mail" type="email" required="" autofocus>
         </div>
         <!-- password -->
         <div class="form-group input-group" style="margin-bottom:0">
