--- a/app/shared/challenge/challenge.modal.view.html
+++ b/app/shared/challenge/challenge.modal.view.html
@@ -8,90 +8,107 @@
     </div>
     <div class='modal-body'>
         <div class="row">
-            <!-- image -->
-            <div class="col-xs-12 col-md-3" style="margin-bottom:15px; text-align:center">
-                <img ng-show="challenge.image" class="img-responsive img-circle badge-img center-block"
-                     ng-src="{{challenge.image}}"/>
-                <img ng-show="!challenge.image" class="img-responsive img-circle badge-img center-block"
-                     src="assets/img/challenge-default.jpg"/>
-                <!-- points -->
-                <span class="label label-primary badge-label-points">{{challenge.levels.length==1 ? challenge.levels[0].points : challenge.levels[0].points+" - "+challenge.levels[challenge.levels.length-1].points}}pts</span>
-            </div>
-            <div class="col-xs-12 col-md-9">
-                <!-- rank -->
-                <p ng-show="challenge.levelAcquired" style="margin-bottom: 0">
-                    Niveau actuel : <span class="important">{{challenge.levels[challenge.levelAcquired-1].name}}</span>
-                    ({{challenge.levelAcquired}}/{{challenge.levels.length}})
-                </p>
-                <!-- available from -->
-                <p style="margin-bottom: 0">
-                    Disponible du : <span class="important">{{challenge.startTime | date:'dd MMMM yyyy'}}
-                </p>
-                <!-- to -->
-                <p style="margin-bottom: 0">
-                    Jusqu'au : <span class="important">{{challenge.endTime | date:'dd MMMM yyyy'}}
-                </p>
-                <!-- length -->
-                <p style="margin-bottom: 0">
-                    Durée : <span class="important">{{challenge.length}}</span><span ng-show="challenge.timePercent">&nbsp;(temps restant : <span
-                        class="important">{{challenge.remaining}}</span>)</span>
-                </p>
+            <div class="col-xs-12">
+                <div class="panel panel-default padding" style="margin-bottom:10px">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-3" style="text-align:center">
+                            <!-- image -->
+                            <img ng-show="challenge.image" class="img-responsive img-circle badge-img center-block"
+                                 ng-src="{{challenge.image}}"/>
+                            <img ng-show="!challenge.image" class="img-responsive img-circle badge-img center-block"
+                                 src="assets/img/challenge-default.jpg"/>
+                            <!-- points -->
+                            <span class="label label-primary badge-label-points">{{challenge.levels.length==1 ? challenge.levels[0].points : challenge.levels[0].points+" - "+challenge.levels[challenge.levels.length-1].points}}pts</span>
+                        </div>
+                        <div class="col-xs-12 col-md-9">
+                            <!-- rank -->
+                            <p ng-show="challenge.levelAcquired" style="margin-bottom: 0">
+                                Niveau actuel : <span class="important">{{challenge.levels[challenge.levelAcquired-1].name}}</span>
+                                ({{challenge.levelAcquired}}/{{challenge.levels.length}})
+                            </p>
+                            <!-- available from -->
+                            <p style="margin-bottom: 0">
+                                Disponible du : <span class="important">{{challenge.startTime | date:'dd MMMM yyyy'}}
+                            </p>
+                            <!-- to -->
+                            <p style="margin-bottom: 0">
+                                Jusqu'au : <span class="important">{{challenge.endTime | date:'dd MMMM yyyy'}}
+                            </p>
+                            <!-- length -->
+                            <p style="margin-bottom: 0">
+                                Durée : <span class="important">{{challenge.length}}</span><span
+                                    ng-show="challenge.timePercent">&nbsp;(temps restant : <span
+                                    class="important">{{challenge.remaining}}</span>)</span>
+                            </p>
 
-                <!-- time bar -->
-                <uib-progressbar style="margin-bottom: 0; margin-top:10px"
-                                 ng-show="challenge.timePercent" max="100"
-                                 value="challenge.timePercent" type="info"><span
-                        class="glyphicon glyphicon-time"></span>&nbsp{{challenge.timePercent}}%
-                </uib-progressbar>
+                            <!-- time bar -->
+                            <uib-progressbar style="margin-bottom: 0; margin-top:10px"
+                                             ng-show="challenge.timePercent" max="100"
+                                             value="challenge.timePercent" type="info"><span
+                                    class="glyphicon glyphicon-time"></span>&nbsp{{challenge.timePercent}}%
+                            </uib-progressbar>
 
-                <!-- progress bar -->
-                <uib-progressbar style="margin-bottom: 0; margin-top:10px"
-                                 ng-show="challenge.progressPercent" max="100"
-                                 value="challenge.progressPercent"
-                                 type="{{challenge.progressPercent == 100 ? 'success' : ''}}"><span
-                        class="glyphicon glyphicon-tasks"></span>&nbsp{{challenge.progressPercent}}%
-                </uib-progressbar>
+                            <!-- progress bar -->
+                            <uib-progressbar style="margin-bottom: 0; margin-top:10px"
+                                             ng-show="challenge.progressPercent" max="100"
+                                             value="challenge.progressPercent"
+                                             type="{{challenge.progressPercent == 100 ? 'success' : ''}}"><span
+                                    class="glyphicon glyphicon-tasks"></span>&nbsp{{challenge.progressPercent}}%
+                            </uib-progressbar>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
         <!-- levels -->
-        <h3 class="badge-level-title" style="margin-bottom:20px">Niveaux</h3>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="panel panel-default padding" style="margin-bottom:0">
+                    <h3 class="badge-level-title" style="margin:0">Niveaux</h3>
+                </div>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-xs-12"
-                 ng-class="{'col-sm-6 block-centered' : challenge.levels.length==1, 'col-sm-6' : challenge.levels.length>1, 'col-md-4' : challenge.levels.length>2}"
+                 ng-class="{'col-md-6 block-centered' : challenge.levels.length==1, 'col-sm-6' : challenge.levels.length>1, 'col-md-4' : challenge.levels.length>2}"
                  style="margin-top:10px" ng-repeat="level in challenge.levels">
-                <!-- image -->
-                <div style="margin-bottom:10px; text-align:center">
-                    <img ng-show="level.image" class="img-responsive img-circle level-img center-block"
-                         ng-src="{{level.image}}"/>
-                    <img ng-show="!level.image" class="img-responsive img-circle level-img center-block"
-                         src="assets/img/level-default.png"/>
-                    <!-- points -->
-                    <span class="label label-primary badge-label-points">{{level.points}}pts</span>
-                </div>
-                <!-- level name -->
-                <h4 style="margin-bottom: 2px; text-align:center"><span
-                        style="font-weight:bold">{{level.name}}</span><span
-                        ng-show="challenge.levelAcquired>=level.index"
-                        class="glyphicon glyphicon-ok badge-glyphicon-sm"></span></h4>
-                <!-- progress bar (level) -->
-                <uib-progressbar style="margin-bottom:10px"
-                                 ng-show="level.percent" max="100"
-                                 value="level.percent" type="{{level.percent == 100 ? 'success' : ''}}">
-                    {{level.percent}}%
-                </uib-progressbar>
+                <div class="panel panel-default padding" style="margin-bottom:0">
+                    <!-- image -->
+                    <div style="text-align:center">
+                        <img ng-show="level.image" class="img-responsive img-circle level-img center-block"
+                             ng-src="{{level.image}}"/>
+                        <img ng-show="!level.image" class="img-responsive img-circle level-img center-block"
+                             src="assets/img/level-default.png"/>
+                        <!-- points -->
+                        <span class="label label-primary badge-label-points">{{level.points}}pts</span>
+                    </div>
+                    <!-- level name -->
+                    <h4 style="margin-bottom: 2px; margin-top:0; text-align:center"><span
+                            style="font-weight:bold">{{level.name}}</span><span
+                            ng-show="challenge.levelAcquired>=level.index"
+                            class="glyphicon glyphicon-ok badge-glyphicon-sm"></span></h4>
+                    <!-- progress bar (level) -->
+                    <uib-progressbar style="margin-bottom:10px"
+                                     ng-show="level.percent" max="100"
+                                     value="level.percent" type="{{level.percent == 100 ? 'success' : ''}}">
+                        <span
+                                class="glyphicon glyphicon-tasks"></span>&nbsp;{{level.percent}}%
+                    </uib-progressbar>
 
-                <!-- conditions -->
-                <div class="row">
-                    <div class="col-xs-12" ng-repeat="condition in level.conditions">
-                        <!-- condition -->
-                        <p style="margin-bottom:0">&bull;&nbsp;{{condition.condition}}</p>
-                        <!-- progress bar (condition) -->
-                        <uib-progressbar class="condition-progressbar" style="margin-bottom: 0;"
-                                         ng-show="condition.percent" max="100"
-                                         value="condition.percent" type="{{condition.percent == 100 ? 'success' : ''}}">
-                        </uib-progressbar>
+                    <!-- conditions -->
+                    <div class="row">
+                        <div class="col-xs-12" ng-repeat="condition in level.conditions">
+                            <!-- condition -->
+                            <p style="margin-bottom:0">&bull;&nbsp;{{condition.condition}}</p>
+                            <!-- progress bar (condition) -->
+                            <uib-progressbar class="condition-progressbar" style="margin-bottom: 0;"
+                                             ng-show="condition.percent" max="100"
+                                             value="condition.percent"
+                                             type="{{condition.percent == 100 ? 'success' : ''}}">
+                            </uib-progressbar>
+                        </div>
                     </div>
                 </div>
             </div>
