Bouton "relever" disparaît lorsqu'on n'est pas connecté. Ajout de la barre de filtre dans "défis" (TODO : externaliser la barre)

--- a/app/shared/badge/badge.view.html
+++ b/app/shared/badge/badge.view.html
@@ -2,6 +2,7 @@
     <!-- panel -->
     <div class="panel panel-default">
         <div class="panel-body">
+            <!-- image -->
             <img ng-show="badge.image" class="img-responsive img-circle level-img center-block"
                  ng-src="{{badge.image}}"/>
             <img ng-show="!badge.image" class="img-responsive img-circle level-img center-block"
