Centralisation du lien du serveur ($rootScope.serverURL). Renommage app.module.js --> app.mdl.js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/css/user.css">
 
     <!-- modules -->
-    <script src="app/app.module.js"></script>
+    <script src="app/app.mdl.js"></script>
     <script src="app/components/navbar/navbar.mdl.js"></script>
     <script src="app/components/home/home.mdl.js"></script>
     <script src="app/components/challenges/challenges.mdl.js"></script>
