Auto refresh. Fix le tri par points. Ajout du tri par quantité de badges. Modification des labels des badges

--- a/app/shared/badge/badge.view.html
+++ b/app/shared/badge/badge.view.html
@@ -11,11 +11,11 @@
             <span class="label label-primary badge-label-points">{{badge.points}}pts</span>
             <!-- top-right icon -->
             <span ng-show="badge.numberPossessed>1" class="badge-multiplier">&times;{{badge.numberPossessed}}</span>
-            <!-- challenge name -->
-            <h4 class="badge-title truncate" style="margin-top:0">{{badge.nameChallenge}}</h4>
             <!-- level name -->
+            <h4 class="badge-title truncate" style="margin-top:0">{{badge.nameLevel}}</h4>
+            <!-- challenge name -->
             <p class="truncate" style="margin-bottom: 0">
-                {{badge.nameLevel}}
+                {{badge.nameChallenge}}
             </p>
         </div>
     </div>
