--- a/app/shared/badge/badge.view.html
+++ b/app/shared/badge/badge.view.html
@@ -1,12 +1,10 @@
-<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 badge-container">
+<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 badge-container animated pulse">
     <!-- panel -->
-    <div class="panel panel-default">
+    <div class="panel panel-default card-shadow">
         <div class="panel-body">
             <!-- image -->
-            <img ng-show="badge.image" class="img-responsive img-circle level-img center-block"
-                 ng-src="{{badge.image}}"/>
-            <img ng-show="!badge.image" class="img-responsive img-circle level-img center-block"
-                 src="assets/img/level-default.png"/>
+            <img class="img-responsive img-circle level-img center-block"
+                 ng-src="{{badge.image ? badge.image : 'assets/img/level-default.png'}}"/>
             <!-- points -->
             <span class="label label-primary badge-label-points">{{badge.points}}pts</span>
             <!-- top-right icon -->
