--- a/app/shared/challenge/challenge.modal.view.html
+++ b/app/shared/challenge/challenge.modal.view.html
@@ -13,10 +13,8 @@
                     <div class="row">
                         <div class="col-xs-12 col-md-3" style="text-align:center">
                             <!-- image -->
-                            <img ng-show="challenge.image" class="img-responsive img-circle badge-img center-block"
-                                 ng-src="{{challenge.image}}"/>
-                            <img ng-show="!challenge.image" class="img-responsive img-circle badge-img center-block"
-                                 src="assets/img/challenge-default.jpg"/>
+                            <img class="img-responsive img-circle badge-img center-block"
+                                 ng-src="{{challenge.image ? challenge.image : 'assets/img/challenge-default.jpg'}}"/>
                             <!-- points -->
                             <span class="label label-primary badge-label-points">{{challenge.levels.length==1 ? challenge.levels[0].points : challenge.levels[0].points+" - "+challenge.levels[challenge.levels.length-1].points}}pts</span>
                         </div>
@@ -77,10 +75,8 @@
                 <div class="panel panel-default padding" style="margin-bottom:0">
                     <!-- image -->
                     <div style="text-align:center">
-                        <img ng-show="level.image" class="img-responsive img-circle level-img center-block"
-                             ng-src="{{level.image}}"/>
-                        <img ng-show="!level.image" class="img-responsive img-circle level-img center-block"
-                             src="assets/img/level-default.png"/>
+                        <img class="img-responsive img-circle level-img center-block"
+                             ng-src="{{level.image ? level.image : 'assets/img/level-default.png'}}"/>
                         <!-- points -->
                         <span class="label label-primary badge-label-points">{{level.points}}pts</span>
                     </div>
