--- a/app/shared/challenge/challenge.view.html
+++ b/app/shared/challenge/challenge.view.html
@@ -1,12 +1,10 @@
-<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 badge-container">
+<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 badge-container animated pulse" >
     <!-- panel -->
-    <div class="panel panel-default badge-panel">
+    <div class="panel panel-default badge-panel card-shadow">
         <div class="panel-body badge-padding pointer-hover" ng-click="moreInfo(challenge)">
             <!-- image -->
-            <img ng-show="challenge.image" class="img-responsive img-circle badge-img center-block"
-                 ng-src="{{challenge.image}}"/>
-            <img ng-show="!challenge.image" class="img-responsive img-circle badge-img center-block"
-                 src="assets/img/challenge-default.jpg"/>
+            <img class="img-responsive img-circle badge-img center-block"
+                 ng-src="{{challenge.image ? challenge.image : 'assets/img/challenge-default.jpg'}}"/>
             <!-- points -->
             <span class="label label-primary badge-label-points">{{challenge.levels.length==1 ? challenge.levels[0].points : challenge.levels[0].points+" - "+challenge.levels[challenge.levels.length-1].points}}pts</span>
             <!-- top-right icon -->
