--- a/app/shared/user/user.view.html
+++ b/app/shared/user/user.view.html
@@ -1,11 +1,10 @@
-<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 user-container">
+<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 user-container animated pulse">
     <a ng-href="#profile/{{user.id}}">
         <!-- panel -->
-    <div class="panel panel-default user-panel">
+    <div class="panel panel-default user-panel card-shadow">
         <div class="panel-body user-padding">
             <!-- image -->
-            <img ng-show="user.profilePic" class="img-responsive img-circle user-pic user-pic-sm center-block" ng-src="{{user.profilePic}}"/>
-            <img ng-show="!user.profilePic" class="img-responsive img-circle user-pic user-pic-sm center-block" src="assets/img/user-default.png"/>
+            <img class="img-responsive img-circle user-pic user-pic-sm center-block" ng-src="{{user.profilePic ? user.profilePic : 'assets/img/user-default.png'}}"/>
             <!-- points -->
             <span class="label user-label-points">{{user.points}}pts</span>
             <!-- name -->
