--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- libs -->
     <link rel="stylesheet" href="assets/libs/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/libs/animate.css">
     <script src="assets/libs/angular.min.js"></script>
     <script src="assets/libs/angular-route.min.js"></script>
     <script src="assets/libs/angular-cookies.min.js"></script>
