--- a/app/src/shared/challenge/challenge.view.html
+++ b/app/src/shared/challenge/challenge.view.html
@@ -1,4 +1,4 @@
-<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 badge-container animated pulse" >
+<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 badge-container" >
     <!-- panel -->
     <div class="panel panel-default badge-panel card-shadow">
         <div class="panel-body badge-padding pointer-hover" ng-click="moreInfo(challenge)">
@@ -21,14 +21,14 @@
                 <!-- time bar -->
                 <uib-progressbar class="badge-progressbar" style="margin-bottom: 0" max="100"
                                  value="challenge.timePercent" type="info"><span
-                        class="glyphicon glyphicon-time"></span>&nbsp{{challenge.timePercent}}%
+                        class="glyphicon glyphicon-time"></span>&nbsp{{trunc(challenge.timePercent)}}%
                 </uib-progressbar>
 
                 <!-- progress bar -->
                 <uib-progressbar class="badge-progressbar" style="margin-bottom: 0;" max="100"
                                  value="challenge.progressPercent"
                                  type="{{challenge.progressPercent == 100 ? 'success' : ''}}"><span
-                        class="glyphicon glyphicon-tasks"></span>&nbsp{{challenge.progressPercent}}%
+                        class="glyphicon glyphicon-tasks"></span>&nbsp{{trunc(challenge.progressPercent)}}%
                 </uib-progressbar>
             </div>
         </div>
